LPS-111757 Rewrite getPathFromURL